<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/activity_formulario_colaborador_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="name"
            android:focusable="true"
            android:hint="@string/activity_formulario_colaborador_hint_nome"
            android:inputType="textCapWords"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/activity_formulario_colaborador_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="emailAddress"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/activity_formulario_colaborador_hint_email"
            android:inputType="textEmailAddress"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/activity_formulario_colaborador_nome"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_colaborador_nome" />

        <EditText
            android:id="@+id/activity_formulario_colaborador_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="password"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/activity_formulario_colaborador_hint_senha"
            android:inputType="textPassword"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/activity_formulario_colaborador_email"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_colaborador_email" />

        <EditText
            android:id="@+id/activity_formulario_colaborador_cpf"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:importantForAutofill="no"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/activity_formulario_colaborador_hint_cpf"
            android:inputType="number"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_colaborador_senha" />

        <EditText
            android:id="@+id/activity_formulario_colaborador_dataDeNascimento"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:importantForAutofill="no"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/activity_formulario_colaborador_hint_dataDeNascimento"
            android:inputType="number"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_colaborador_senha" />

        <TextView
            android:id="@+id/activity_formulario_colaborador_label_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="18dp"
            android:text="@string/activity_formulario_colaborador_label_endereco"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="@id/activity_formulario_colaborador_cpf"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_colaborador_cpf" />

        <EditText
            android:id="@+id/activity_formulario_colaborador_rua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="postalAddress"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/activity_formulario_colaborador_hint_rua"
            android:inputType="textCapWords"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/activity_formulario_colaborador_label_endereco"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_colaborador_label_endereco" />

        <EditText
            android:id="@+id/activity_formulario_colaborador_bairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:importantForAutofill="no"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/activity_formulario_colaborador_hint_bairro"
            android:inputType="textCapWords"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/activity_formulario_colaborador_rua"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_colaborador_rua" />

        <EditText
            android:id="@+id/activity_formulario_colaborador_cep"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="postalCode"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/activity_formulario_colaborador_hint_cep"
            android:inputType="number"
            android:textSize="22sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_colaborador_bairro" />

        <EditText
            android:id="@+id/activity_formulario_colaborador_numero"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="password"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/activity_formulario_colaborador_hint_numero"
            android:inputType="number"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_colaborador_bairro" />

        <EditText
            android:id="@+id/activity_formulario_colaborador_cidade"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:importantForAutofill="no"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/activity_formulario_colaborador_hint_cidade"
            android:inputType="textCapWords"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_colaborador_cep" />

        <EditText
            android:id="@+id/activity_formulario_colaborador_uf"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:importantForAutofill="no"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/activity_formulario_colaborador_hint_uf"
            android:inputType="textCapCharacters"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_colaborador_numero" />

        <EditText
            android:id="@+id/activity_formulario_colaborador_complemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:importantForAutofill="no"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/activity_formulario_colaborador_hint_complemento"
            android:inputType="textCapWords"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_colaborador_cidade" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>